# car_plate_recognice

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/carben/carben/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/carben/carben/: MainActivity.java
app/src/main/java/com/carben/carben/utils/: OpenGLUtils.java
app/src/main/java/com/carben/carplate_test/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/carben/carben/: ExampleUnitTest.java
carplate/: CMakeLists.txt  build.gradle
carplate/src/androidTest/java/com/carben/carplate/: ExampleInstrumentedTest.java
carplate/src/main/: AndroidManifest.xml
carplate/src/main/cpp/: JavaCallHelper.cpp  JavaCallHelper.h  PicParser.cpp  PicParser.h  car-plate-recognice.cpp  safe_queue.h
carplate/src/main/cpp/recgnize/: CarColorPlateLocation.cpp  CarColorPlateLocation.h  CarPlateLocation.cpp  CarPlateLocation.h  CarPlateRecgnize.cpp  CarPlateRecgnize.h  CarSobelPlateLocation.cpp  CarSobelPlateLocation.h  ColorHsv.h  ParsePicParam.h  PlateBean.h  PlateInPicMsgBean.h
carplate/src/main/java/com/carben/carplate/: OnPlateMsgListener.java  PlateParam.java  RecognicePlateHelper.java
carplate/src/test/java/com/carben/carplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
